# scancode-analyzer

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  INSTALL.rst  README.md  README.rst  azure-pipelines.yml  configure  configure.bat  requirements.txt  scancode-analyzer.ABOUT  setup.cfg
.github/workflows/: ci-docs.yml  ci-pytest.yml  docs-ci.yml  pypi-release.yml
docs/: requirements.txt
docs/scripts/: doc8_style_check.sh
docs/source/: conf.py  index.rst
docs/source/analysis-use-case/: index.rst  suggesting-licenses.rst
docs/source/api-and-outputs/: index.rst  json-output.rst
docs/source/getting-started/: index.rst
docs/source/how-analysis-is-performed/: cases-incorrect-scans.rst  index.rst  (+1 more)
env_files/nlp-predict/: environment.yml
env_files/results-analyzer/: environment.yml
etc/data/: sample_metadata.json
etc/debian_license_detection/: rules_deb_copy_test.ipynb
etc/load_scan_into_dataframe/: divide_cases.py  load_results_file.py  load_results_package.py  load_test_data.py  postgres.py
etc/notebooks/: INSTALL.rst  load_results_files.ipynb  load_results_package.ipynb  mock_db_data_from_json.ipynb
etc/scancode_rules/: rules_analyze.py  test_load_scancode_data.py
src/analyzer_nlp/: nlp_models.py
src/notebooks/: load_results_files.ipynb  load_results_package.ipynb  mock_db_data_from_json.ipynb  postgres.ipynb
src/results_analyze/: __init__.py  analyzer.py  analyzer_plugin.py  analyzer_summary.py  df_file_io.py  divide_cases.py  file_io.py  load_results_file.py  load_results_package.py  nlp_models.py  postgres.py  rules_analyze.py
src/scancode_analyzer/: analyzer_plugin.py  license_analyzer.py  load_data.py  nlp.py  summary.py
tests/: file_io.py  load_test_data.py  test_analyzer.py  test_analyzer_plugin.py  test_analyzer_summary.py  test_divide_cases.py  test_license_analyzer.py
(+103 files in other folders)
