[metadata]
license_file = apache-2.0.LICENSE
name = scancode-analyzer
author = nexB Inc. and others
author_email = info@aboutcode.org
description = A scancode-toolkit plugin to analyze scan results for License Detection Issues
long_description = file:README.rst
url = https://github.com/aboutcode-org/scancode-analyzer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    - scancode
    - license
    - sca
    - analysis
    - classifiers
    - nlp

[options]
python_requires = >=3.6.*
package_dir=
    =src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    scancode-toolkit >= 3.2
    attr
    commoncode
    plugincode

setup_requires = setuptools_scm[toml] >= 4

[options.entry_points]
scancode_post_scan =
    analyzer = scancode_analyzer.analyzer_plugin:ResultsAnalyzer

[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    black
deep =
    pyyaml
    pandas
    #Used in pandas for hdf5 storage
    #TODO: Check if we can use only hdf5
    tables
    # We have an indirect dependency on tensorflow, and this are the versions supported
    # tensorflow 2.3.1 requires numpy<1.19.0,>=1.16.0
    numpy<1.19.0,>=1.16.0
    matplotlib
    wordcloud
    ernie
    # ernie 0.0.33b0 requires transformers==2.4.1
    transformers==2.4.1
    torch
    # This is used for clearcode data loading
    psycopg2
jupyter =
    jupyterlab
    aboutcode-toolkit >= 6.0.0

docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
    MarkupSafe == 2.0.1
